# NetzWirbel

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  CREDITS.txt  LICENSE.md  LICENSE.txt  README.md  THIRD-PARTY-NOTICES.md  THIRD-PARTY-NOTICES.txt  a.out.js  a.out.wasm  build_all.cmd  build_all.sh  build_odyssey.cmd  build_ordermatch.cmd  docs_server.js  install_prerequisites.cmd  install_prerequisites.sh  package.json  run_coverage.cmd  run_coverage.sh  run_docs.cmd  run_docs.sh  run_examples.cmd  run_examples.sh  test.cpp  test2.cpp  test3.cpp  test_click.js
docs/: app.js  index.html  nav.json  styles.css
docs/content/: README.md
docs/content/api-cpp/: App.md  Command.md  Components.md  Context.md  Element.md  Elements.md  Event.md  Network.md  RingBuffer.md
docs/content/api-js/: NetzWirbelBridge.md  RingBuffers.md
docs/content/tutorials/: 01-getting-started.md  02-creating-elements.md  03-handling-events.md  04-market-data.md  05-banzai-exchange.md
examples/: CMakeLists.txt
examples/BanzaiExchange/: BanzaiExchangeApp.hpp  CMakeLists.txt  FixParser.cpp  FixParser.h  README.md  index.html  main.cpp
examples/Calculator/: CMakeLists.txt  CalculatorApp.hpp  README.md  main.cpp
examples/CalculatorHtml/: CMakeLists.txt  CalculatorHtmlApp.hpp  README.md  index.html  main.cpp
examples/CardGame/: CMakeLists.txt  CardGameApp.hpp  README.md  main.cpp
examples/Desktop/: CMakeLists.txt  DesktopApp.hpp  main.cpp
examples/GalacticDisplay/: CMakeLists.txt  GalacticDisplayApp.hpp  README.md  main.cpp
examples/MarketData/: CMakeLists.txt  MarketDataApp.hpp  README.md  main.cpp
examples/MarketDataHtml/: CMakeLists.txt  MarketDataHtmlApp.hpp  README.md  index.html  main.cpp
examples/OdysseyBackend/: CMakeLists.txt  Market.cpp  Market.h  Order.h  OrderMatcher.h  README.md  main.cpp
examples/OdysseyTrader/: CMakeLists.txt  OdysseyTraderApp.hpp  OverAlignedAllocator.hpp  Protocol.h  README.md  index.html  main.cpp
examples/OrderMatchBackend/: Application.cpp  Application.h  CMakeLists.txt  IDGenerator.h  Market.cpp  Market.h  Order.h  OrderMatcher.h  README.md  ordermatch.cfg  ordermatch.cpp
include/NetzWirbel/: App.hpp  Command.hpp  Context.hpp  Network.hpp  RingBuffer.hpp
include/NetzWirbel/DOM/: Button.hpp  Element.hpp  Elements.hpp  Event.hpp  Grid.hpp  Menu.hpp  RichTextArea.hpp  Spinner.hpp  StatusBar.hpp  TabContainer.hpp  TextArea.hpp  TextBox.hpp  Toolbar.hpp  Window.hpp
js/: netzwirbel_bridge.js
server/: coverage_server.js  orchestrator.js
src/: App.cpp  Context.cpp  Network.cpp  RingBuffer.cpp
src/DOM/: Button.cpp  Element.cpp  Menu.cpp  RichTextArea.cpp  Spinner.cpp  StatusBar.cpp  TabContainer.cpp  TextArea.cpp  TextBox.cpp  Toolbar.cpp  Window.cpp
tests/: CMakeLists.txt
tests/core/: ContextTest.cpp  RingBufferTest.cpp
tests/dom/: DOMComponentsTest.cpp  ElementTest.cpp
tests/examples/: FixParserTest.cpp  test_examples.cpp
tests/network/: NetworkTest.cpp
