add_executable(GalacticDisplay main.cpp)
target_link_libraries(GalacticDisplay NetzWirbel)
set_target_properties(GalacticDisplay PROPERTIES SUFFIX ".js")
set_target_properties(GalacticDisplay PROPERTIES COMPILE_FLAGS "-s USE_SDL=2")
if (EMSCRIPTEN)
    set_target_properties(GalacticDisplay PROPERTIES LINK_FLAGS "-s USE_SDL=2 -s EXPORTED_FUNCTIONS=_main,_malloc,_free,_netzwirbel_init,_netzwirbel_tick -s EXPORTED_RUNTIME_METHODS=ccall,cwrap,UTF8ToString,stringToUTF8,lengthBytesUTF8,wasmMemory -s ALLOW_MEMORY_GROWTH=1")
endif()
